# Kursovaya

./: .gitignore  Assembly.SLDASM  Axelerometr.SLDPRT  Case.SLDPRT  ElectricBoard.SLDPRT  FrontCase.SLDPRT  NIR.docx  NIR_102.docx  Platform.SLDPRT  Questions.txt  README.md  RPZ.docx  SBHolde.SLDPRT  ~$ElectricBoard.SLDPRT  ~$NIR.docx
model/: CMakeLists.txt  README.md  main.cpp  model.slx  runScript.m  test.slx
model/m/: ImuBlock.m
model/matlab/: Accelerometer.m  Axelerometr.m  Bins.m  Bins.m~  Errors.m  Gyroscope.m  ModelSettings.m  ModelSettings.m~  R.txt  TemperatureCalibration.m  axels_errors.txt  calibration_results.txt  errors_log.txt  getcurrentg.m  getrotationquaternion.m  make3SkewMatrix.m  make4SkewMatrix.m  model.slx  model.slx.autosave  model.slxc  realparts.m  realpartsvar.m  runScript.m  test.m  vel.py
model/matlab/slprj/_jitprj/: jitEngineAccessInfo.mat  (+55 more)
model/matlab/telemetry/: 24.05.20_full_day_km.txt  V.txt  linear_vel.txt  one_rev_around_earth.csv  one_rev_around_earth.txt  russia_one_rev.txt  russia_one_rev_km.txt  russia_one_rev_re.txt  tel.txt  telemetry.csv  telemetry.txt
model/slprj/_jitprj/: jitEngineAccessInfo.mat  s5hsjxW0BumWDwNsKg7zTbE.l  s82ENoEIM0Py7VyGByfKTfH.l  sHXkVeTGObOy9CM0L3I1fSD.mat  sJqiEltbAlGOYAQGZyhIJOH.l  sT9T8jF5QNRH0uoliTpjjX.mat  scXyrJYhlXyrtKei6Y7XSpE.l  scXyrJYhlXyrtKei6Y7XSpE.mat  sk84BrOtuIOK7RsqB90coI.mat  soY0gveUd0diNyTqopBNF6F.l  soY0gveUd0diNyTqopBNF6F.mat  szSVfHbmvu7Mavvhuc0Wq7E.l
model/src/: bins.cpp  bins.h  imu_block.h
model/src/logger/: logger.cpp  logger.h
model/src/namespace/: bins_namespace.h
(+156 files in other folders)
